--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,9 @@ html
 {
     font-size: 62.5%;
     box-sizing: border-box;
-    background-image: linear-gradient(to top, var(--grisClaro) 30%, var(--blanco) 70%); 
+    background: rgb(2,44,52);
+    background: linear-gradient(90deg, rgba(2,44,52,1) 0%, rgba(0,151,167,1) 25%, rgba(6,112,132,1) 75%, rgba(2,44,52,1) 100%);
 
-    
     scroll-snap-type: y mandatory;
 }
 
@@ -44,7 +44,12 @@ h1,h2,h3
 /*ypo*/
 .hero
 {
-
+    background-image: url(../image/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
+    margin-bottom: 2rem;
 }
 
 
