--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,18 @@ h1,h2,h3
 /*ypo*/
 .hero
 {
-    background-image: url(../image/hero.jpg);
+    background-image: url(../image/hero_edit.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
     position: relative;
     margin-bottom: 2rem;
+}
+
+img#hero 
+{
+    width: 100px;
+    height: 100px;
 }
 
 
