hero img commit

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ html
 {
     font-size: 62.5%;
     box-sizing: border-box;
-    background-image: linear-gradient(to top, var(--grisClaro) 30%, var(--blanco) 70%); 
+    background: rgb(2,44,52);
+    background: linear-gradient(90deg, rgba(2,44,52,1) 0%, rgba(0,151,167,1) 25%, rgba(6,112,132,1) 75%, rgba(2,44,52,1) 100%);
 
     
     scroll-snap-type: y mandatory;
@@ -45,7 +46,7 @@ h1,h2,h3
 /*ypo*/
 .hero
 {
-    background-image: url(../image/hero_edit.jpg);
+    background-image: url(../img/hero.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
@@ -53,11 +54,7 @@ h1,h2,h3
     margin-bottom: 2rem;
 }
 
-img#hero 
-{
-    width: 100px;
-    height: 100px;
-}
+
 
 
 .contain-shadow
