--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,6 @@ html
     box-sizing: border-box;
     background: rgb(2,44,52);
     background: linear-gradient(90deg, rgba(2,44,52,1) 0%, rgba(0,151,167,1) 25%, rgba(6,112,132,1) 75%, rgba(2,44,52,1) 100%);
-
-    
     scroll-snap-type: y mandatory;
 }
 
@@ -45,7 +43,7 @@ h1,h2,h3
     align-items: center;
     display: flex;
     flex-direction: column;
-    padding: 1rem;*/
+    padding: 1rem;
 }
 .spotify{
     margin-left: 1rem;
@@ -68,8 +66,27 @@ h1,h2,h3
     margin-bottom: 2rem;
 }
 
+.container-hero
+{
+    position: absolute;
+    background-color: rgba(0, 0, 0, .7);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
-
+.ubication
+{
+    
+}
+.container-hero h3
+{
+    font-size: 5rem;
+    color: var(--blanco)
+}
 
 .contain-shadow
 {
