--- a/css/style.css
+++ b/css/style.css
@@ -164,9 +164,9 @@ input[type="email"] {
 
 
 /*Uicab*/
-.footer
-{
+.footer{
     font-size: 16px;
-    font-family: 'Krub', sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
+}
 }
