--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,9 @@ input[type="email"] {
 
 /*Uicab*/
 .footer{
-    font-size: 16px;
+    font-size: 20px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-align: justify;
     text-align: center;
 }
 }
