--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,9 @@ input[type="email"] {
 
 /*Uicab*/
 .footer{
-    font-size: 20px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+    
 }
 }
