--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ html
     box-sizing: border-box;
     background: rgb(2,44,52);
     background: linear-gradient(90deg, rgba(2,44,52,1) 0%, rgba(0,151,167,1) 25%, rgba(6,112,132,1) 75%, rgba(2,44,52,1) 100%);
+
+    
     scroll-snap-type: y mandatory;
 }
 
@@ -44,7 +46,6 @@ h1,h2,h3
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    padding: 1rem;
 }
 .spotify{
     margin-left: 5rem;
@@ -69,28 +70,9 @@ h1,h2,h3
 
 .date{
     text-align: center;
-
-.container-hero
-{
-    position: absolute;
-    background-color: rgba(0, 0, 0, .7);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.ubication
-{
     
 }
-.container-hero h3
-{
-    font-size: 5rem;
-    color: var(--blanco)
-}
+
 
 .contain-shadow
 {
@@ -100,51 +82,7 @@ h1,h2,h3
 /*Edgar*/
 .information
 {
-    /* Estilos para la sección de información */
-
-    background-color: #f4f4f4; /* Color de fondo */
-    padding: 20px; /* Espaciado interno */
-
-
-/* Estilos para el formulario de suscripción */
-.form-subscribe {
-    max-width: 400px; /* Ancho máximo del formulario */
-    margin: 0 auto; /* Centrar el formulario en la sección */
-}
-
-fieldset {
-    border: 1px solid #ccc; /* Borde del fieldset */
-    padding: 10px; /* Espaciado interno del fieldset */
-    margin-bottom: 20px; /* Margen inferior del fieldset */
-}
-
-legend {
-    font-weight: bold; /* Texto del título en negrita */
-}
-
-label {
-    display: block; /* Mostrar cada etiqueta en una línea separada */
-    margin-bottom: 5px; /* Margen inferior para separar la etiqueta del campo de entrada */
-}
-
-input[type="email"] {
-    width: 100%; /* Ocupar el ancho completo del contenedor padre */
-    padding: 8px; /* Espaciado interno del campo de entrada */
-    box-sizing: border-box; /* Incluir el relleno y el borde en el ancho total */
-}
-
-.boton {
-    text-align: center; /* Centrar el botón dentro de su contenedor */
-}
-
-.boton_enviar {
-    background-color: #333; /* Color de fondo del botón */
-    color: #fff; /* Color del texto del botón */
-    padding: 10px 20px; /* Espaciado interno del botón */
-    border: none; /* Sin borde */
-    cursor: pointer; /* Cambiar el cursor al pasar por encima */
-}
-
+    
 }
 
 /*Isau*/
@@ -164,10 +102,9 @@ input[type="email"] {
 
 
 /*Uicab*/
-.footer{
+.footer
+{
+    font-size: 16px;
+    font-family: 'Krub', sans-serif;
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
-    
-}
 }
