--- a/css/style.css
+++ b/css/style.css
@@ -36,24 +36,24 @@ h1,h2,h3
 }
 
 /*Guille*/  
-.header{
-    background-color: var(--oscuro);
-} 
-.iconos{
-    align-items: center;
+
+.nav_bg
+{
+    background-color: var(--terciario);
+}
+
+.nav_principal
+{
     display: flex;
     flex-direction: column;
-    padding: 1rem;
-    padding: 1rem;
+    justify-content: center;
+    align-items: center;
 }
-.spotify{
-    margin-left: 5rem;
-}
-.youtube{
-    margin-left: 5rem;
-}
-.AppleMusic{
-    margin-left: 5rem;
+
+.iconos
+{
+    max-width: 120rem;
+    margin: 0 auto;
 }
 
 /*ypo*/
@@ -122,4 +122,12 @@ h1,h2,h3
     font-size: 16px;
     font-family: 'Krub', sans-serif;
     text-align: center;
+}
+
+@media (min-width: 768px) 
+{
+    .nav_principal
+    {
+        flex-direction: row;
+    }
 }
