--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,6 @@ html
     box-sizing: border-box;
     background: rgb(2,44,52);
     background: linear-gradient(90deg, rgba(2,44,52,1) 0%, rgba(0,151,167,1) 25%, rgba(6,112,132,1) 75%, rgba(2,44,52,1) 100%);
-
-    
     scroll-snap-type: y mandatory;
 }
 
@@ -69,7 +67,15 @@ h1,h2,h3
     margin-bottom: 2rem;
 }
 
-.date{
+.hero h3
+{
+    font-size: 5rem;
+    color: #fff;
+    position: absolute;
+}
+
+.date
+{
     text-align: center;
     
 }
