primer diseño form

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ h1,h2,h3
     text-align: center;
 }
 
-/*Guille*/  
+/*Memo Toño*/  
 
 .nav_bg
 {
@@ -86,7 +86,7 @@ h1,h2,h3
 
 }
 
-/*Edgar*/
+/*Ragdios*/
 .form-subscribe {
     text-align: center;
 }
