--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
     --AzulCeleste: #33A1DE;
     --AzulCeleste2: #5DC8FF;
     --AzulCeleste3: #0080FF;
+    /*Paletas de azules*/
+    --AzulFuerte: #1607fa;
+    --AzulFuerte2:#1005ea;
+    --AzulFuerte3: #0b03da;
+    --AzulFuerte4:#0000b9;
 
 }
 
@@ -16,22 +21,23 @@ html
 {
     font-size: 62.5%;
     box-sizing: border-box;
-    background: rgb(2,44,52);
-    background: linear-gradient(90deg, rgba(2,44,52,1) 15%, rgba(0,151,167,1) 40%, rgba(6,112,132,1) 60%, rgba(2,44,52,1) 85%);
+    background: white;
+    background: linear-gradient(90deg, rgb(0, 32, 243)5%, (6,112,132,1) 40%, rgba(6,112,132,1) 60%, rgb(0, 32, 243) 85%);
     scroll-snap-type: y mandatory;
 }
 
 h1,h2,h3
 {
     text-align: center;
+
 }
 
 /*Memo Toño*/  
 
 .nav_bg
 {
-    background-color: var(--AzulNebulosa);
-    border-radius: 10%;
+    background-color: var(--AzulFuerte4);
+    border-radius: 2%;
 }
 
 .nav_principal
