Footer centrado y cambios al nav

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
     --AzulCeleste: #33A1DE;
     --AzulCeleste2: #5DC8FF;
     --AzulCeleste3: #0080FF;
+    --blanco: #FFFFFF;
+    --gris: #808080;
 }
 
 html
@@ -27,7 +29,7 @@ body
 /* ------------------------NAVEGACION PRINCIPAL---------------------*/
 .nav_bg
 {
-    background-color: var(--AzulNocturno);
+    background-color: var(--blanco);
 }
 
 .nav_principal
@@ -54,9 +56,7 @@ body
 }
 .redes:hover
 {
-    margin: 1rem;
-    border: 1px solid var(--AzulNebulosa );
-    background-color: var(--AzulNocturno2);
+    background-color: var(--AzulProfundo);
 }
 
 
@@ -147,6 +147,7 @@ body
     background-color: var(--AzulNocturno); /* Cambia el color de fondo al pasar el mouse */
     border: .3rem solid var(--AzulProfundo); /* Puedes cambiar el color y el grosor según tus preferencias */
 }
+
 
 
 /* -------------------CARRUSEL DE FOTOS-------------------------- */
@@ -256,7 +257,6 @@ body
 .contact
 {   
     padding: 2rem;
-    justify-content: left; /* Alineación a la izquierda */
     font-size: 1.5rem; /* Tamaño de la fuente */
     background-color: var(--AzulNocturno);
 }
@@ -264,9 +264,10 @@ body
 .contact h2
 {
     margin: 0;
-    text-align: center; /* Alineación del texto a la izquierda */
     font-size: 3rem; /* Tamaño de la fuente */
     margin-bottom: 2rem; /* Margen inferior */
+    text-align: center;
+    
 }
 .contact p
 {
@@ -300,7 +301,7 @@ body
     .contact h2,
     .contact p
     {
-        text-align: left;
+        text-align: center;
     }
 
     .hero
@@ -313,4 +314,6 @@ body
         justify-content: space-around;
     }
 
+
 }
+
