Parte de Angel 2.0

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body
 /* ------------------------NAVEGACION PRINCIPAL---------------------*/
 .nav_bg
 {
-    background-color: var(--AzulNocturno);
+    background-color: var(--AzulIntenso5);
 }
 
 .nav_principal
