--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,54 @@ body
     text-decoration: none;
 
 }
+/*----------------QUIENES SOMOS--------------------------*/
+@media (min-width: 768px) 
+{
+    .contenidos{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: .5rem;
+        font-family: 'Quicksand', sans-serif;    
+        margin: 1rem 0;
+        border-radius: 2rem;
+        padding: 1.5rem;
+        max-width: 150rem;
+        margin-right: auto;
+        margin-left: auto;;
+    
+    }
+}
+.sombra{
+    box-shadow: -3px 1px 5px 4px rgba(0,0,0,0.13);
+    -webkit-box-shadow: -3px 1px 5px 4px rgba(0,0,0,0.13);
+    -moz-box-shadow: -3px 1px 5px 4px rgba(0,0,0,0.13);
 
+}
+.contenido{
+    display: flex;
+    flex-direction: column;
+   padding: 2rem;
+   margin: 0 auto;
+   align-items: center;
+  
+}
+.contenido h3{
+    color: var(--AzulCeleste3);
+    font-weight: normal;
+}
+.contenido p{
+    line-height: 2;
+    text-align: center;
+}
+.contenido .QS{
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--AzulIntenso2);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /* ----------------FECHAS DEL CONCIERTO------------------*/
 .contain-shadow
